Even more spelling checker.

--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains <br />/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains <br />/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -52,13 +52,13 @@
       <h1>FAQ</h1>
       <p>
         <b> How do I sign up for the ETDS? </b> </br>
-        You can register with your teamcaptains, they will sign you up for the lottery.
-        You will hear from your teamcaptain if you are got in or not. </br></br>
+        You can register with your team captains, they will sign you up for the lottery.
+        You will hear from your team captain if you got in or not. </br></br>
         <b> How do I pay for the ETDS? </b> </br>
-        We get our payments from your teamcaptains. So, you will transfer the money
-        to your teampcaptains (they will provide you with their bankaccount for such affairs).
-        And they transfer the money for all the teammembers that got in, to us,
-         including a list who payed. </br></br>
+        We get our payments from your team captains. So, you will transfer the money
+        to your team captains (they will provide you with their bank account for such affairs).
+        And they transfer the money for all the team members that got in, to us,
+         including a list who paid. </br></br>
         <b> I  don’t have a partner, can I still participate? </b> </br>
         Yes, you sign up without a partner. You will have to find a partner at
         the blind date rounds. See the tournament section about blind date rounds. </br></br>
@@ -66,7 +66,7 @@
         Yes you can. </br></br>
         <b>Can I go through the lottery system without my dancing partner? </b></br>
         No, if you sign up together, you are either both in, or both out.</br></br>
-        <b>Can I get a discount if I only participate 1 day or don’t spend te night? </b></br>
+        <b>Can I get a discount if I only participate one day or don’t spend the night? </b></br>
         No. </br></br>
         <b>How can I experience the ETDS if I’m short on cash?</b></br>
         If you become a super volunteer, you can attend the ETDS for free.
