--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -83,7 +83,7 @@
         and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
         dances consist out of Chachacha, Rumba, Jive, and for higher levels,
         Samba and Paso doble. <br/><br/>
-        This tournament is not only about competing. The are a multitude of fun
+        This tournament is not only about competing. There are a multitude of fun
         activities planned, and two great parties. <br/><br/>
     </div>
     <div class="footer" id="footer">
