--- a/location.html
+++ b/location.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -75,7 +75,7 @@
     <h2> Train </h2>
     <p> There are 3 stations near to the USC. Depending on where you are traveling
       from you can choose between Science park, Muiderpoort or Amstel. From
-      Muiderpoort and Amstel Station you can than take a bus to the USC.</br></br>
+      Muiderpoort and Amstel Station you can then take a bus to the USC.</br></br>
     <b> From Amsterdam Central / Science Park </b> </br>
       If your traveling from Amsterdam central, we recommend taking the train to Amsterdam
       Science park. It is only 2 stops from central. </br>
@@ -90,7 +90,7 @@
       From Amstel station and Muiderpoort station you can get the bus 40 to
       Muiderpoort station respectively  to Amstel station. The bus stop is
       Science Park Aqua, which is in front of the USC Universum.
-      At the Amstelstation you can also take bus 240, which also stops at science
+      At the Amstel station you can also take bus 240, which also stops at Science
       Park Aqua.
     </p>
     <h2> Bike (from Amstel station or Muiderpoort station) </h2>
@@ -103,7 +103,7 @@
     <h1>Parking</h1>
     <p>
       We have limited parking available at the location Science Park. It is
-      possible to park around the Science Park, but it will be payed parking.
+      possible to park around the Science Park, but it will be paid parking.
       Our tip is to park outside Amsterdam to try and circumvent paying expensive
       parking rates.
       Here are some possible locations: </br></br>
@@ -111,7 +111,7 @@
           374 parking spots </br>
           Click <a href="https://goo.gl/maps/eRo4JiPASajs8icW6"> here </a> for location on Google Maps. </br>
           From here it is a 9 min train ride to Amsterdam Science Park. </br>
-          Due to fusion with Amsterdam, the parkingfees in Weesp can change,
+          Due to fusion with Amsterdam, the parking fees in Weesp can change,
           so be sure to check parking rates before you park </br></br>
           <b> P+R Diemen </b> </br>
           128 parking spots </br>
