--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
           </div>
         </li>
         <li class="registration">
-          <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div>
+          <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div>
         </li>
         <li class="volunteer">
           <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div>
@@ -68,7 +68,7 @@
         <tr>
           <th></th>
           <th> Regular dinner </th>
-          <th> Special Diet (incl. vegatarian and vegan) </th>
+          <th> Special Diet (incl. vegetarian and vegan) </th>
           </th>
         <tr>
           <th> Saturday Morning</td>
@@ -118,9 +118,9 @@
             <ul id="MenuListUL">
               <li id="MenuList">White Rice</li>
               <li id="MenuList">Sambal Goreng with green beans</li>
-              <li id="MenuList">Sayur Lodeh ( vegatable in coconutmilk )</li>
+              <li id="MenuList">Sayur Lodeh ( vegetable in coconut milk )</li>
               <li id="MenuList">Gado Gado ( Cold vegetable dish )</li>
-              <li id="MenuList">vega mihoen</li>
+              <li id="MenuList">vegan mihoen</li>
               <li id="MenuList">Sambal and Atjar Tjampoer</li>
             </ul>
             <br />
