--- a/registration.html
+++ b/registration.html
@@ -43,17 +43,17 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration current"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration current"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
     </div>
   <div class="main" id="main">
     <h1>Registration</h1>
-    <p>Teamcaptains have to register you. Please ask your local dance society
-      for the contact information of your teamcaptain. If you have trouble
-      finding your teamcaptains  <a href="mailto:etds.amsterdam@gmail.com" id="maillink"><b>contact us.</b></a></br></br>
-      We have 600 spots for the tournament. After the registration the system,
+    <p>team captains have to register you. Please ask your local dance society
+      for the contact information of your team captain. If you have trouble
+      finding your team captains  <a href="mailto:etds.amsterdam@gmail.com" id="maillink"><b>contact us.</b></a></br></br>
+      We have 600 spots for the tournament. After the registration, the system,
       otherwise known as the lottery, will draft names. The lottery will start 3
       months before the ETDS. We will announce the registration deadline soon. </br>
       For dance-couples: If you are registered together, you will get in together or
@@ -63,7 +63,7 @@
     <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
     <div class = "dashboard-btn"> <a href="registration.html"> XTDS DASHBOARD </a> </div>
     <p></br>
-    This is where you can log on as teamcaptain to register participants, update
+    This is where you can log on as team captain to register participants, update
     information and check your registrations. </p>
 
   </div>
