--- a/tournament.html
+++ b/tournament.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -61,11 +61,11 @@
       and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
       dances consist out of Chachacha, Rumba, Jive, and for higher levels,
       Samba and Paso doble. <br/><br/>
-      This tournament is not only about competing. The are a multitude of fun
+      This tournament is not only about competing. There are a multitude of fun
       activities planned, and two great parties. <br/><br/>
       </p>
       <h1> Classes </h1>
-      <p> There are two starting groups: Breitensport and CloseD/Open. If you're are a
+      <p> There are two starting groups: Breitensport and CloseD/Open. If you are a
       recreational dancer (non-competition) or beginner you're probably in the Breitensport.
       If you dance competitions, it will be depending on your competition level.
       Check the overview at the bottom of the page. </p>
@@ -148,7 +148,7 @@
     <h1> Mandatory Blind Dating </h1>
     <p> For the (super) experienced of us dancers there is a mandatory blind dating.
     This way you will have another face to look at, then that of your usual dance partner.
-    But above all, then you wont be so darn good. Give other people also a chance to win!
+    But above all, then you won't be so darn good. Give other people a chance to win!
     Or you can try to defeat your partner.</br>
     The table below shows form what level blind dating will be mandatory. </br></br> </p>
 
