--- a/volunteer.html
+++ b/volunteer.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer current"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -51,7 +51,7 @@
   <div class="main" id="main">
     <h1>Mandatory Shifts</h1>
     <p> A large event as the ETDS needs a lot of helping hands. Without people helping
-      out ETDS's couldn't take place. This is why teams are mandatory to do
+      out the ETDS can not take place. This is why teams are mandatory to do
       a minimal number of hours for shifts. </p>
 
     <h1>Volunteer shifts</h1>
