--- a/costs.html
+++ b/costs.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -53,7 +53,7 @@
       Below you'll find an indication of the prices for the ETDS Amsterdam in 2020.
       The prices are not definite yet and can be subject to change. Check our
       website regularly for the latest prices.
-      Your teamcaptains will be informed shortly before the registation about the
+      Your team captains will be informed shortly before the registration about the
       definitive price. </br></br>
       <table>
         <tr>
