--- a/packinglist.html
+++ b/packinglist.html
@@ -43,7 +43,7 @@
               <a href="faq.html">FAQ</a>
           </div>
           </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> Teampcaptains </br>/ Registration </a> </div></li>
+          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
           <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
           <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
         </ul>
@@ -52,7 +52,7 @@
       <h1>Packing List</h1>
       <p> This packing list is a suggestion. You can customize it any way you like. </br>
         Beware that you are responsible for
-      own belownings. The ETDS isn’t responsible for personal belongings that have gone
+      own belongings. The ETDS isn’t responsible for personal belongings that have gone
       missing or have been damaged. </p>
       <h2> Walking on shoes outside the dance floor is not permitted, so take
         some nice socks with you to walk on! Tip: you can buy glow in the dark
