More spellmistakes removed.

--- a/costs.html
+++ b/costs.html
@@ -50,7 +50,7 @@
     </div>
     <div class="main" id="main">
       <h1>Costs </h1>
-      Below you'll find an indication of the prices for the ETDS Amsterdam in 2020.
+      Below you can find an indication of the prices for the ETDS Amsterdam in 2020.
       The prices are not definite yet and can be subject to change. Check our
       website regularly for the latest prices.
       Your team captains will be informed shortly before the registration about the
