--- a/index.html
+++ b/index.html
@@ -1,112 +1,120 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>ETDS Amsterdam</title>
   <meta name="robots" content="noindex">
   <link rel="stylesheet" href="css/combine.css">
 </head>
+
 <body onload="dayOrNight()" class="body">
   <div class="container" id="container">
     <div class="header" id="header">
-      <div class="amsterdam"><p id="amsterdam"> Amsterdam by <br/> </p> </div>
+      <div class="amsterdam">
+        <p id="amsterdam"> Amsterdam by <br /> </p>
+      </div>
 
       <div class="daynight">
         <div class="container2">
-          <div class = "toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
-            <div class = "inner-circle"></div>
+          <div class="toggle-btn" id="toggle-btn" onclick='nightSwitch()'>
+            <div class="inner-circle"></div>
           </div>
         </div>
       </div>
     </div>
     <p class="title"> ETDS AMSTERDAM 2020 </p>
     <div class="navbar" id="navbar">
-        <ul class="navlist" id="navlist">
-          <li class = "logo" id = "logo">
-              <div class="container2" id="btn-nav">
-                <div class = "toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
-                  <div class = "inner-circle" id="innercircle2"></div>
-              </div>
+      <ul class="navlist" id="navlist">
+        <li class="logo" id="logo">
+          <div class="container2" id="btn-nav">
+            <div class="toggle-btn" id="toggle-btn2" onclick='nightSwitch()'>
+              <div class="inner-circle" id="innercircle2"></div>
             </div>
-          </li>
-          <li class = "house current"> <div id="home">Home </div> </li>
-          <li class = "dropdown" onmouseenter="myEnterFunction()" > <a class="dropbtn info"> <div id="info">Information </div> </a>
-            <div class="dropdown-content" id="dropdown-content">
-              <a href="tournament.html">Tournament</a>
-              <a href="program.html"> Program </a>
-              <a href="location.html">Location</a>
-              <a href="costs.html">Costs</a>
-              <a href="menu.html">Menu</a>
-              <a href="packinglist.html">Packing List </a>
-              <a href="regulations.html">Regulations</a>
-              <a href="results.html">Results</a>
-              <a href="lostandfound.html">Lost & Found</a>
-              <a href="faq.html">FAQ</a>
           </div>
-          </li>
-          <li class="registration"> <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div></li>
-          <li class="volunteer"> <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div></li>
-          <li class="merchandise"> <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div></li>
-        </ul>
+        </li>
+        <li class="house current">
+          <div id="home">Home </div>
+        </li>
+        <li class="dropdown" onmouseenter="myEnterFunction()"> <a class="dropbtn info">
+            <div id="info">Information </div>
+          </a>
+          <div class="dropdown-content" id="dropdown-content">
+            <a href="tournament.html">Tournament</a>
+            <a href="program.html"> Program </a>
+            <a href="location.html">Location</a>
+            <a href="costs.html">Costs</a>
+            <a href="menu.html">Menu</a>
+            <a href="packinglist.html">Packing List </a>
+            <a href="regulations.html">Regulations</a>
+            <a href="results.html">Results</a>
+            <a href="lostandfound.html">Lost & Found</a>
+            <a href="faq.html">FAQ</a>
+          </div>
+        </li>
+        <li class="registration">
+          <div id="registration"> <a href="registration.html"> team captains </br>/ Registration </a> </div>
+        </li>
+        <li class="volunteer">
+          <div id="volunteer"> <a href="volunteer.html"> Volunteer </a> </div>
+        </li>
+        <li class="merchandise">
+          <div id="merchandise"> <a href="merchandise.html"> Merchandise </a></div>
+        </li>
+      </ul>
     </div>
     <div class="main" id="main">
       <h1> Welcome everyone</h1>
-      <p> We are happy to host the 63rd ETDS for you! The ETDS will start from
-      <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/>
-      On this website you can find all the information about the ETDS Amsterdam 2020.
-      If you're not familiar with the term ETDS please read the information below. </p>
+      <p> We are so happy to host the 63rd ETDS! The ETDS will begin
+        <b>Friday May 29th</b> and ends <b>Monday June 1st, 2020</b>. Hopefully we will see you there! <br />
+        This website contains all the information about the ETDS Amsterdam 2020. If you are not familiar with the term ETDS please read the information below.</p>
       <h1> Introduction video & Theme announcement </h1>
       <div style="text-align:center">
-        <iframe src="https://drive.google.com/file/d/1dQzoL3kfh5O_fqGrFKdgoVT86A6-62Zi/preview"
-        width="640" height="480"></iframe>
+        <iframe src="https://drive.google.com/file/d/1dQzoL3kfh5O_fqGrFKdgoVT86A6-62Zi/preview" width="640" height="480"></iframe>
       </div>
       <h1> Theme </h1>
-      <p> In our capital city we like to party. And we like to party in style!
-      So put on your neon coloured outfit and party with us.  The theme of the
-      63rd ETDS is Amsterdam, the blacklight district. </br></br>
-      If you fancy some blacklight make-up or paint, GO FOR IT! There
-      will be blacklights present on the theme party! And yes boys and girls
-      <b>blacklight glitters also exists </b> ♥ !!
-      We will expect your best and extravagant self in blacklight! See you at
-      the competition (party).</p>
+      <p> In our city we like to party in style. So put on your neon colored outfit and party all night long.
+        The theme of the 63rd ETDS i <i>Amsterdam, the blacklight district</i>. </br></br>
+        If you fancy some blacklight make-up or paint, GO FOR IT! There will be blacklights present at the theme party.
+        And for your information, yes, <b>blacklight glitters also exists </b> ♥ !!
+        We expect your best and most extravagant self, not just during the evenings! See you there.</p>
       <div class="photo1 photocontainer"></div>
       <div class="photo2 photocontainer"></div>
       <div class="photo3 photocontainer"></div>
-        <h1> What is the ETDS? </h1>
-        <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for
-        <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament
-        attracting hundreds of dancers from Europe. The tournament has hosted
-        twice a year since 1989. This time the ETDS will compete for 'Der Maus'
-        in Amsterdam. <br/><br/>
-        All dancers can compete in the tournament, which is spread over two days.
-        For each dancer there are two competitions to join, Standard and Latin.
-        The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
-        and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
-        dances consist out of Chachacha, Rumba, Jive, and for higher levels,
-        Samba and Paso doble. <br/><br/>
-        This tournament is not only about competing. There are a multitude of fun
-        activities planned, and two great parties. <br/><br/>
+      <h1> What is the ETDS? </h1>
+      <p>ETDS stands for <b>E</b>uropean <b>T</b>ournament for
+        <b>D</b>ancing <b>S</b>tudents and is a large ballroom dancing tournament.
+        It attracts hundreds of dancers from all over Europe. The tournament has been
+        hosted twice a year since 1989. This time your team will compete for 'Der Maus' in
+        Amsterdam.<br /><br />
+        All dancers from a student dance society can compete in the tournament,
+        which is spread over two days. For each dancer there are two competitions to join,
+        Standard and Latin. Standard dances consist out of Slow Waltz, Tango, Quickstep,
+        and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin dances consist
+        out of Chacha, Rumba, Jive, and for higher levels, Samba and Paso doble. <br /><br />
+        This tournament is not only about competing. There is a multitude of
+        fun activities planned, and two great parties. <br /><br />
     </div>
     <div class="footer" id="footer">
       <div class="footer-elmnts">
         <?xml version="1.0" encoding="iso-8859-1"?>
         <!-- Generator: Adobe Illustrator 18.1.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg version="1.1" id="facebook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 167.657 167.657" style="enable-background:new 0 0 167.657 167.657;" xml:space="preserve" width="50" height="50">
-        <g>
-          <path style="fill:#010002;" d="M83.829,0.349C37.532,0.349,0,37.881,0,84.178c0,41.523,30.222,75.911,69.848,82.57v-65.081H49.626
+        <svg version="1.1" id="facebook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 167.657 167.657" style="enable-background:new 0 0 167.657 167.657;" xml:space="preserve" width="50"
+          height="50">
+          <g>
+            <path style="fill:#010002;" d="M83.829,0.349C37.532,0.349,0,37.881,0,84.178c0,41.523,30.222,75.911,69.848,82.57v-65.081H49.626
             v-23.42h20.222V60.978c0-20.037,12.238-30.956,30.115-30.956c8.562,0,15.92,0.638,18.056,0.919v20.944l-12.399,0.006
             c-9.72,0-11.594,4.618-11.594,11.397v14.947h23.193l-3.025,23.42H94.026v65.653c41.476-5.048,73.631-40.312,73.631-83.154
-            C167.657,37.881,130.125,0.349,83.829,0.349z"/>
-        </g>
+            C167.657,37.881,130.125,0.349,83.829,0.349z" />
+          </g>
         </svg>
 
-        <p class="footer-txt"> <a href="https://www.facebook.com/ETDS-2020-Amsterdam-103919511106341" target="_blank" >facebook-page</a>  </p>
+        <p class="footer-txt"> <a href="https://www.facebook.com/ETDS-2020-Amsterdam-103919511106341" target="_blank">facebook-page</a> </p>
 
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
         <svg id="location" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg2" width="50" height="50"
-          viewBox="0 0 63 63" sodipodi:docname="location.svg" inkscape:version="0.92.1 r15371">
+          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg2" width="50" height="50" viewBox="0 0 63 63" sodipodi:docname="location.svg"
+          inkscape:version="0.92.1 r15371">
           <metadata id="metadata8">
             <rdf:RDF>
               <cc:Work rdf:about="">
@@ -172,8 +180,8 @@
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
         <svg id="mail" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="13mm" height="13mm" viewBox="0 0 16.7 16.7" version="1.1" id="svg3864"
-          inkscape:version="0.92.1 r15371" sodipodi:docname="mail.svg">
+          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="13mm" height="13mm" viewBox="0 0 16.7 16.7" version="1.1" id="svg3864" inkscape:version="0.92.1 r15371"
+          sodipodi:docname="mail.svg">
           <defs id="defs3858">
             <clipPath clipPathUnits="userSpaceOnUse" id="clipPath18">
               <path d="m 237.326,92.593 h 47.279 v 47.467 h -47.279 z" id="path16" inkscape:connector-curvature="0" />
@@ -203,12 +211,12 @@
             </g>
           </g>
         </svg>
-        <p class="footer-txt"> <a href="mailto:etds.amsterdam@gmail.com" target="_blank" >etds.amsterdam@gmail.com</a>  </p>
+        <p class="footer-txt"> <a href="mailto:etds.amsterdam@gmail.com" target="_blank">etds.amsterdam@gmail.com</a> </p>
 
       </div>
     </div>
   </div>
   <script src="js/combine.js"></script>
-  </body>
+</body>
 
-  </html>
+</html>
