--- a/packinglist.html
+++ b/packinglist.html
@@ -51,10 +51,9 @@
     <div class="main" id="main">
       <h1>Packing List</h1>
       <p> This packing list is a suggestion. You can customize it any way you like. </br>
-        Beware that you are responsible for
-      own belongings. The ETDS isn’t responsible for personal belongings that have gone
-      missing or have been damaged. </p>
-      <h2> Walking on shoes outside the dance floor is not permitted, so take
+      Beware that you are responsible for own belongings. The ETDS is not responsible nor
+      accountable for personal belongings that have gone missing or have been damaged. </p>
+      <h2> Walking on dancingshoes outside the dance floor is not permitted, so take
         some nice socks with you to walk on! Tip: you can buy glow in the dark
         socks</h2>
       <h2> General </h2>
@@ -70,10 +69,10 @@
       <ul id="packing">
       <li>Dancing shoes for ballroom and Latin</li>
       <li>Scratcher for your shoes</li>
-      <li>blister pads</li>
+      <li>Blister pads</li>
       <li>Sheer tights</li>
       <li>Dancing outfit for ballroom and Latin </li>
-      <li>small pants/boxer for under your skirt</li>
+      <li>Small pants/boxer for under your skirt</li>
       <li>Association hoody (if you have one)</li>
       <li>Make-up</li>
       <li>Hairstyling stuff</li>
@@ -111,7 +110,7 @@
       </ul>
 
     </br></br>
-      <p>You don’t have to bring your own plate, cup and cutlery. They will be provided.</p>
+      <p>You do not have to bring your own plate, cup and cutlery. They will be provided.</p>
 
     </div>
     <div class="footer" id="footer">
