--- a/tournament.html
+++ b/tournament.html
@@ -50,30 +50,26 @@
     </div>
   <div class="main" id="main">
     <h1>ETDS</h1>
-      <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for
-      <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament
-      attracting hundreds of dancers from Europe. The tournament has been hosted
-      twice a year since 1989. This time the ETDS will compete for 'Der Maus'
-      in Amsterdam. <br/><br/>
+      <p>The ETDS, known as the <b>E</b>uropean <b>T</b>ournament for
+      <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament, attracts
+      hundreds of dancers from Europe. The tournament has been hosted twice a year
+      since 1989. This time your team will compete for 'Der Maus' in Amsterdam. <br/><br/>
       All dancers can compete in the tournament, which is spread over two days.
       For each dancer there are two competitions to join, Standard and Latin.
-      The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
-      and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
-      dances consist out of Chachacha, Rumba, Jive, and for higher levels,
-      Samba and Paso doble. <br/><br/>
-      This tournament is not only about competing. There are a multitude of fun
+      The Standard dances consist out of Slow Waltz, Tango, Quickstep, and for higher
+      levels Slow Foxtrot and the Viennese Waltz. The Latin dances consist out of Chacha,
+      Rumba, Jive, and for higher levels, Samba and Paso doble. <br/><br/>
+      This tournament is not only about competing. There is a multitude of fun
       activities planned, and two great parties. <br/><br/>
       </p>
       <h1> Classes </h1>
-      <p> There are two starting groups: Breitensport and CloseD/Open. If you are a
-      recreational dancer (non-competition) or beginner you're probably in the Breitensport.
-      If you dance competitions, it will be depending on your competition level.
-      Check the overview at the bottom of the page. </p>
+      <p> There are two starting groups: Breitensport and CloseD/Open. If you are a recreational dancer
+        (non-competition) or a beginner you are probably in the Breitensport.
+        If you dance competitions, it will be depending on your competition level.
+        Check the overview at the bottom of the page. </p>
       <h1> Breitensport </h1>
-      <p> This class contains subclasses (in ascending level): Amateurs, Professionals,
-      Masters and Champions. <br/>
-      There will be a qualification round with all Breitensport dancers, to determine in which level you will continue
-      the competition. </p>
+      <p> This class contains subclasses (in ascending level): Amateurs, Professionals, Masters and Champions. <br/>
+      There will be a qualification round with all Breitensport dancers, to determine in which class you will continue the competition. </p>
       <h1> Breitensport or ClosedD/Open? </h1>
       <table>
         <tr>
@@ -137,20 +133,20 @@
 
       <h1> Blind dating </h1>
       <p> No partner? You can still sign up! </br>
-      The lottery system will equally distribute leaders and followers and
-      people do not mess with the system (by not showing etc, SO DON'T!),
-      there will be a dance partner for everyone!
-      To find a partner we have blind date rounds on Friday and Saturday evening.
-      During these rounds all without a partner (or mandatory blinddaters) are
-      recognizably marked for you to invite to dance with you. If you like the
-      specimen you are dancing with, you can together register at the tournament office.
+      The lottery system will equally distribute leaders, so there will be a dance partner for everyone!
+      To find a partner we have blind date rounds on Friday and Saturday evening. During these rounds
+      all without a partner (or mandatory blinddaters) are recognizably marked so it is easy to
+      recognize a potential candidate. . If you like the specimen you are dancing with
+      (and they like you too), you can register together at the tournament office.
+      You can have two partners, one for the Standard dances and one for the Latin
+      competition.
     </p>
     <h1> Mandatory Blind Dating </h1>
-    <p> For the (super) experienced of us dancers there is a mandatory blind dating.
-    This way you will have another face to look at, then that of your usual dance partner.
-    But above all, then you won't be so darn good. Give other people a chance to win!
-    Or you can try to defeat your partner.</br>
-    The table below shows form what level blind dating will be mandatory. </br></br> </p>
+    <p> For the (super) experienced dancers, there is a mandatory blind dating. This way you will
+      not only have another face to look at, then that of your usual dance partner. But above all,
+      then you won't be so darn good. Give other people a chance to win! Or you can try to
+      defeat your regular partner with this new found one. </br>
+    The table below shows when blind dating is mandatory. </br></br> </p>
 
     <table>
       <tr>
