--- a/volunteer.html
+++ b/volunteer.html
@@ -50,8 +50,8 @@
     </div>
   <div class="main" id="main">
     <h1>Mandatory Shifts</h1>
-    <p> A large event as the ETDS needs a lot of helping hands. Without people helping
-      out the ETDS can not take place. This is why teams are mandatory to do
+    <p> A large event like the ETDS needs a lot of helping hands. WiWithout people helping out,
+      the ETDS could not take place. This is why teams are mandatory to do
       a minimal number of hours for shifts. </p>
 
     <h1>Volunteer shifts</h1>
@@ -67,7 +67,7 @@
           can join the parties and enjoy the atmosphere.</p>
         </br>
 
-    <p><b> It is not possible to inscribe for shifts yet. </b></p>
+    <p><b> It is not possible to put your name down for any shifts yet. </b></p>
 
   </div>
   <div class="footer" id="footer">
