--- a/faq.html
+++ b/faq.html
@@ -55,10 +55,8 @@
         You can register with your team captains, they will sign you up for the lottery.
         You will hear from your team captain if you got in or not. </br></br>
         <b> How do I pay for the ETDS? </b> </br>
-        We get our payments from your team captains. So, you will transfer the money
-        to your team captains (they will provide you with their bank account for such affairs).
-        And they transfer the money for all the team members that got in, to us,
-         including a list who paid. </br></br>
+        We get our payments from your team captains. So, you will transfer the money to
+        your team captains (they will provide you with their bank account for such affairs).</br></br>
         <b> I  don’t have a partner, can I still participate? </b> </br>
         Yes, you sign up without a partner. You will have to find a partner at
         the blind date rounds. See the tournament section about blind date rounds. </br></br>
