UPDAT: FIXED spelling.

--- a/volunteer.html
+++ b/volunteer.html
@@ -50,7 +50,7 @@
     </div>
   <div class="main" id="main">
     <h1>Mandatory Shifts</h1>
-    <p> A large event like the ETDS needs a lot of helping hands. WiWithout people helping out,
+    <p> A large event like the ETDS needs a lot of helping hands. Without people helping out,
       the ETDS could not take place. This is why teams are mandatory to do
       a minimal number of hours for shifts. </p>
 
