UPDATED sponsoring, merchandise and registration.

--- a/costs.html
+++ b/costs.html
@@ -50,11 +50,11 @@
     </div>
     <div class="main" id="main">
       <h1>Costs </h1>
-      Below you can find an indication of the prices for the ETDS Amsterdam in 2020.
+      <p>Below you can find an indication of the prices for the ETDS Amsterdam in 2020.
       The prices are not definite yet and can be subject to change. Check our
       website regularly for the latest prices.
       Your team captains will be informed shortly before the registration about the
-      definitive price. </br></br>
+      definitive price. </p></br></br>
       <table>
         <tr>
           <th>Type</th>
@@ -69,15 +69,18 @@
           <td>90 euro</td>
         </tr>
         <tr>
-          <td>Visitor</td>
-          <td>Not determined</td>
+          <td>Visitor Daytime 9-19h</td>
+          <td>5 euro</td>
+        </tr>
+        <tr>
+          <td>Visitor Daytime 20h-2h</td>
+          <td>10 euro</td>
         </tr>
         <tr>
           <td>Super-Volunteer</td>
           <td>Free</td>
         </tr>
       </table>
-
     </div>
     <div class="footer" id="footer">
       <div class="footer-elmnts">
