--- a/merchandise.html
+++ b/merchandise.html
@@ -51,7 +51,12 @@
   <div class="main" id="main">
     <h1>Merchandise</h1>
     <p> coming soon. </p>
-
+    <h1>Sponsoring</h1>
+    <a href="https://www.rentabike.nl/" target="_blank">
+    <div style="padding: 30px; float: left;">
+      <img src="/imgs/Rentabike-logo.png">
+    </div>
+  </a>
   </div>
   <div class="footer" id="footer">
     <div class="footer-elmnts">
