--- a/registration.html
+++ b/registration.html
@@ -50,12 +50,12 @@
     </div>
   <div class="main" id="main">
     <h1>Registration</h1>
-    <p>team captains have to register you. Please ask your local student dance society
+    <p>Team captains have to register you. Please ask your local student dance society
       for the contact information of your team captain. If you have trouble
       finding your team captains  <a href="mailto:etds.amsterdam@gmail.com" id="maillink"><b>contact us.</b></a></br></br>
       We have 600 spots available for the tournament. After the registration, the system,
       otherwise known as the lottery, will draft names. The lottery will start 3
-      months before the ETDS. We will announce the registration deadline soon. </br>
+      months before the ETDS and the registration will open 15th of February.</br>
       For dance-couples: If you are registered together, you will get in together or
       you are out together. <br/>
     </p>
