--- a/volunteer.html
+++ b/volunteer.html
@@ -62,8 +62,8 @@
 
     <h1>Super volunteer</h1>
     <p> As a super volunteer you will receive food and a sleeping spot on the
-      ETDS in exchange for volunteer hours.</br> <b> !As a super volunteer you will
-        not be able to participate in the tournaments! </b>, but of course you
+      ETDS in exchange for at least 20 volunteer hours.</br> <b> As a super volunteer you will
+        not be able to participate in the tournaments! </b> But of course you
           can join the parties and enjoy the atmosphere.</p>
         </br>
 
