toevoegen usc logo

--- a/merchandise.html
+++ b/merchandise.html
@@ -56,6 +56,11 @@
     <div style="padding: 30px; float: left;">
       <img src="/imgs/Rentabike-logo.png">
     </div>
+    <a href="https://usc.uva.nl/" target="_blank">
+    <div style="padding: 30px; float: left;">
+      <img src="/imgs/logo-usc.png">
+    </div>
+
   </a>
   </div>
   <div class="footer" id="footer">
